moving javascript to js files

--- a/app/views/tracks/edit.html.haml
+++ b/app/views/tracks/edit.html.haml
@@ -1,96 +1,4 @@
-:javascript
-  var chart_data = #{@track.heights_data},
-    max_rel_time = #{@track.duration},
-    range_from = #{@track.ff_start.nil? ? 0 : @track.ff_start},
-    range_to = #{@track.ff_end.nil? ? @track.duration : @track.ff_end};
-
-  $(document).ready(function() {
-
-    $("#time-selector").ionRangeSlider({
-      min: 0,
-      max: max_rel_time,
-      type: 'double',
-      step: 1,
-      prettify: false,
-      hasGrid: true,
-      from: range_from,
-      to: range_to,
-      onChange: function (obj) {
-        range_from = obj.fromNumber;
-        range_to = obj.toNumber;
-        set_plot_bands();
-      }
-    });
-
-    $('#heights-chart').highcharts({
-      chart: {
-        type: 'area'
-      },
-      title: {
-        text: #{t '.elev_chart_html'}
-      },
-      plotOptions: {
-        series: {
-          marker: {
-            radius: 1
-          }
-        }
-      },
-      xAxis: {
-      plotBands: [{
-          color: 'gray',
-          from: 0,
-          to: 0,
-          id: 'plotband-start'
-        },
-        {
-          color: 'gray',
-          from: 0,
-          to: 0,
-          id: 'plotband-end'
-        },
-      ]},
-      tooltip: {
-        crosshairs: true
-      },
-      credits: {
-        enabled: false
-      },
-      series: [{
-        name: #{t '.elevation_html'},
-        pointInterval: 10,
-        tooltip: {
-          valueSuffix: #{t 'units.m_html'}
-        },
-        data: chart_data
-      }]
-    });
-    set_plot_bands();
-
-  });
-
-  function set_plot_bands() {
-    chart = $('#heights-chart').highcharts();
-    chart.xAxis[0].removePlotBand('plotband-start');
-    chart.xAxis[0].removePlotBand('plotband-end');
-
-    chart.xAxis[0].addPlotBand({
-                    from: 0,
-                    to: range_from,
-                    color: 'gray',
-                    id: 'plotband-start'
-                });
-
-    chart.xAxis[0].addPlotBand({
-                    from: range_to,
-                    to: max_rel_time,
-                    color: 'gray',
-                    id: 'plotband-end'
-                });
-
-    $('#ff_start').val(range_from);
-    $('#ff_end').val(range_to);
-  };
+.track-edit-data{track_edit_data_attr}
 
 .container.top-buffer
   = form_for @track, :html => {:class => 'form-horizontal', :role => 'form', :id => 'track_upload_form'} do |f|
