--- a/app/views/tracks/show.html.haml
+++ b/app/views/tracks/show.html.haml
@@ -1,482 +1,7 @@
 - provide :title, title(@track)
-
-:javascript
-
-  $(function() {
-
-    // Массив хэшей содержащий данные трека
-    charts_data = #{@track.charts_data};
-    // Максимальная высота трека
-    max_height = #{@track.max_height};
-    min_height = #{@track.min_height};
-
-    var param_from = #{params[:f].nil? ? -1 : params[:f]};
-    var param_to = #{params[:t].nil? ? -1 : params[:t]};
-
-    if (param_from <= param_to || param_from > max_height || param_to >= max_height) {
-      param_from = -1;
-      param_to = -1;
-    }
-
-    if (param_to < min_height) {
-      param_to = -1;
-    }
-
-    range_from = param_from == -1 ? max_height : param_from;
-    range_to = param_to == -1 ? min_height : param_to;
-
-    $(document).ready(function() {
-
-      $("#range-selector").ionRangeSlider({
-        min: max_height,
-        max: min_height,
-        type: 'double',
-        step: 50,
-        prettify: false,
-        hasGrid: true,
-        from: max_height,
-        to: min_height,
-        onFinish: function (obj) {      // callback is called on slider action is finished
-          if (in_imperial) {
-            range_from = obj.fromNumber / mft_k;
-            range_to = obj.toNumber / mft_k;
-          } else {
-            range_from = obj.fromNumber;
-            range_to = obj.toNumber;
-          }
-          window.history.replaceState({}, document.title, "?f=" + range_from + "&t=" + range_to);
-          set_chart_data();
-        }
-      });
-
-      $('#elevation_distance_chart').highcharts({
-          chart: {
-            type: 'spline',
-            marginLeft: 70
-          },
-          title: {
-            text: #{t 'tracks.show.eldstch_html'}
-          },
-          plotOptions: {
-            spline: {
-              marker: {
-                enabled: false
-              }
-            },
-            area: {
-              marker: {
-                enabled: false
-              }
-            },
-            series: {
-              marker: {
-                radius: 1
-              },
-              point: {
-                events: {
-                  mouseOver: function() {
-                    syncTooltip('elevation_distance_chart', this.x);
-                  }
-                }
-              }
-            }
-          },
-          yAxis: {
-            min: 0,
-            title: {
-              text: ''
-            }
-          },
-          tooltip: {
-            shared: true,
-            crosshairs: true
-          },
-          credits: {
-            enabled: false
-          },
-          series:
-          [
-            {
-              name: #{t 'tracks.show.eldst_el_s_html'},
-              pointInterval: 10,
-              tooltip: {
-                valueSuffix: ''
-              }
-            },
-            {
-              name: #{t 'tracks.show.eldst_dst_s_html'},
-              pointInterval: 10,
-              tooltip: {
-                valueSuffix: ''
-              }
-            },
-            {
-              name: #{t 'tracks.show.eldst_h_s_html'},
-              type: 'area',
-              fillOpacity: 0.3,
-              color: Highcharts.getOptions().colors[0],
-              lineWidth: 1,
-              tooltip: {
-                valueSuffix: ''
-              }
-            }
-            ]
-        });
-
-        $('#speeds_chart').highcharts({
-          chart: {
-            type: 'spline',
-            marginLeft: 70
-          },
-          title: {
-            text: #{t 'tracks.show.spdch_html'}
-          },
-          plotOptions: {
-            spline: {
-              marker: {
-                enabled: false
-              }
-            },
-            series: {
-              marker: {
-                radius: 1
-              },
-              point: {
-                events: {
-                  mouseOver: function() {
-                    syncTooltip('speeds_chart', this.x);
-                  }
-                }
-              }
-            }
-          },
-          yAxis: [{ //Speed yAxis
-            min: 0,
-            labels: {
-              style: {
-                color: Highcharts.getOptions().colors[1]
-              }
-            },
-            title: {
-              text: '',
-              style: {
-                color: Highcharts.getOptions().colors[1]
-              }
-            }
-          }],
-          tooltip: {
-            shared: true,
-            crosshairs: true,
-            valueDecimals: 0
-          },
-          credits: {
-            enabled: false
-          },
-          series:
-          [
-            {
-              name: #{t 'tracks.show.spd_hs_html'},
-              color: '#52A964',
-              tooltip: {
-                valueSuffix: ''
-              }
-            },
-            {
-              name: #{t 'tracks.show.spd_vs_html'},
-              color: '#A7414E',
-              tooltip: {
-                valueSuffix: ''
-              }
-            },
-            {
-              name: #{t 'tracks.show.raw_ground_speed'},
-              type: 'line',
-              color: '#AAE3CC',
-              enableMouseTracking: false,
-              lineWidth: 7,
-              visible: false,
-              tooltip: {
-                valueSuffix: ''
-              }
-            },
-            {
-              name: #{t 'tracks.show.raw_vertical_speed'},
-              type: 'line',
-              color: '#DFAFAD',
-              enableMouseTracking: false,
-              lineWidth: 7,
-              visible: false,
-              tooltip: {
-                valueSuffix: ''
-              }
-            }
-          ]
-        });
-
-        $('#glideratio_chart').highcharts({
-          chart: {
-            type: 'spline',
-            marginLeft: 70
-          },
-          title: {
-            text: #{t 'tracks.show.grch_html'}
-          },
-          plotOptions: {
-            spline: {
-              marker: {
-                enabled: false
-              }
-            },
-            series: {
-              marker: {
-                radius: 1
-              },
-              point: {
-                events: {
-                  mouseOver: function() {
-                    syncTooltip('glideratio_chart', this.x);
-                  }
-                }
-              }
-            }
-          },
-          tooltip: {
-            crosshairs: true,
-            valueDecimals: 2
-          },
-          yAxis: {
-            min: 0,
-            title: {
-              text: ' '
-            }
-          },
-          credits: {
-            enabled: false
-          },
-          series: [
-            {
-              name: #{t 'tracks.show.gr_s_html'},
-              color: '#37889B',
-              tooltip: {
-                valueSuffix: ''
-              },
-              zIndex: 2
-            },
-            {
-              name: #{t 'tracks.show.raw_gr'},
-              type: 'line',
-              color: '#A6CDCE',
-              lineWidth: 7,
-              enableMouseTracking: false,
-              zIndex: 1,
-              visible: false
-            }
-          ]
-        });
-
-        $('#all_data_chart').highcharts({
-          chart: {
-            type: 'spline'
-          },
-          title: {
-            text: #{t 'tracks.show.adc_html'}
-          },
-          plotOptions: {
-            spline: {
-              marker: {
-                enabled: false
-              }
-            },
-            series: {
-              marker: {
-                radius: 1
-              }
-            }
-          },
-          yAxis: [{ //Speed yAxis
-            min: 0,
-            title: {
-              text: #{t 'tracks.show.adc_html'}
-            }
-          },
-            { // Elev, dist yAxis
-              min: 0,
-              title: {
-                text: #{t 'tracks.show.adc_ed_y_html'}
-              },
-              opposite: true
-            },
-            { // GR yAxis
-              min: 0,
-              max: 5,
-              tickInterval: 0.5,
-              title: {
-                text: #{t 'tracks.show.adc_gr_y_html'}
-              },
-              opposite: true
-            }
-          ],
-          tooltip: {
-            shared: true,
-            crosshairs: true
-          },
-          credits: {
-            enabled: false
-          },
-          series:
-          [
-            {
-            name: #{t 'tracks.show.adc_hspd_html'},
-            yAxis: 0,
-            color: Highcharts.getOptions().colors[2],
-            tooltip: {
-              valueSuffix: '',
-              valueDecimals: 0
-            }
-          },
-            {
-              name: #{t 'tracks.show.adc_vspd_html'},
-              yAxis: 0,
-              color: Highcharts.getOptions().colors[0],
-              tooltip: {
-                valueSuffix: '',
-                valueDecimals: 0
-              }
-            },
-            {
-              name: #{t 'tracks.show.adc_gr_s_html'},
-              yAxis: 2,
-              color: Highcharts.getOptions().colors[1],
-              tooltip: {
-                valueSuffix: '',
-                valueDecimals: 2
-              }
-            },
-            {
-              name: #{t 'tracks.show.adc_h_s_html'},
-              yAxis: 1,
-              color: '#aaa',
-              tooltip: {
-                valueSuffix: '',
-                valueDecimals: 0
-              }
-            },
-            {
-              name: #{t 'tracks.show.adc_dst_html'},
-              yAxis: 1,
-              color: Highcharts.getOptions().colors[5],
-              tooltip: {
-                valueSuffix: '',
-                valueDecimals: 0
-              }
-            },
-            {
-              name: #{t 'tracks.show.adc_ele_html'},
-              yAxis: 1,
-              color: Highcharts.getOptions().colors[3],
-              tooltip: {
-                valueSuffix: '',
-                valueDecimals: 0
-              }
-            }
-          ]
-        });
-     show_track_on_document_ready();
-
-    });
-
-  });
-
-  function updateUnits() {
-
-    var chart;
-    var speed_unit = (in_imperial ? #{t 'units.mph_html'} : #{t 'units.kmh_html'});
-    var dist_unit = (in_imperial ? #{t 'units.ft_html'} : #{t 'units.m_html'});
-
-
-    $('.spd-unit').text(speed_unit);
-    $('.dst-unit').text(dist_unit);
-
-    // elevation/distance chart
-    chart = $('#elevation_distance_chart').highcharts();
-    chart.yAxis[0].update({
-      title: {
-        text: #{t 'tracks.show.eldst_dst_html'} + ', ' + dist_unit
-      }
-    });
-    chart.series[0].update({
-      tooltip: {
-        valueSuffix: ' ' + dist_unit
-      }
-    });
-    chart.series[1].update({
-      tooltip: {
-        valueSuffix: ' ' + dist_unit
-      }
-    });
-    chart.series[2].update({
-      tooltip: {
-        valueSuffix: ' ' + dist_unit
-      }
-    });
-
-    // speeds chart
-    chart = $('#speeds_chart').highcharts();
-    chart.yAxis[0].update({
-      title: {
-        text: #{t 'tracks.show.spd_ax_html'} + ', ' + speed_unit
-      }
-    });
-    chart.series[0].update({
-      tooltip: {
-        valueSuffix: ' ' + speed_unit
-      }
-    });
-    chart.series[1].update({
-      tooltip: {
-        valueSuffix: ' ' + speed_unit
-      }
-    });
-
-    chart = $('#all_data_chart').highcharts();
-    chart.yAxis[0].update({
-      title: {
-        text: #{t 'tracks.show.adc_sp_y_html'} + ', ' + speed_unit
-      }
-    });
-    chart.yAxis[1].update({
-      title: {
-        text: #{t 'tracks.show.adc_ed_y_html'} + ', ' + dist_unit
-      }
-    });
-    chart.series[0].update({
-      tooltip: {
-        valueSuffix: ' ' + speed_unit
-      }
-    });
-    chart.series[1].update({
-      tooltip: {
-        valueSuffix: ' ' + speed_unit
-      }
-    });
-    chart.series[3].update({
-      tooltip: {
-        valueSuffix: ' ' + dist_unit
-      }
-    });
-    chart.series[4].update({
-      tooltip: {
-        valueSuffix: ' ' + dist_unit
-      }
-    });
-    chart.series[5].update({
-      tooltip: {
-        valueSuffix: ' ' + dist_unit
-      }
-    });
-
-  }
-
+ 
+.track-data{track_data_attr}
+  
 .container
   .page-header
     .row
@@ -521,41 +46,13 @@
                 %li{:role => 'presentation'}
                   = link_to t('general.delete'), @track, :method => :delete, :data => {:confirm => t('.delete_confirmation')}, :role => 'menuitem'
 
-  -#.row
-  -#  .col-md-3
-  -#    %dl.dl-horizontal
-  -#      %dt
-  -#        %strong=t '.dt_dist'
-  -#      %dd
-  -#      %dt
-  -#        %strong=t '.dt_elev'
-  -#      %dd
-  -#      %dt
-  -#        %strong=t '.dt_dur'
-  -#      %dd
-  -#  .col-md-5
-  -#    %dl.dl-horizontal
-  -#      %dt.d-term
-  -#        %strong=t '.dt_hspd'
-  -#      %dd#dd_h_speed
-  -#
-  -#
-  -#      %dt.d-term
-  -#        %strong=t '.dt_vspd'
-  -#      %dd#dd_v_speed
-  -#
-  -#      %dt
-  -#        %strong=t '.dt_gr'
-  -#      %dd#dd_gr
-
-
   .row
     .col-md-11.col-md-offset-1.col-sm-12
       .row
         .col-md-4.col-sm-4.col-xs-6
           .param-val
             .avg-val.fa-3x#dd_distance
-            .dst-unit.fa-2x= t 'units.m_html'
+            .dst-unit.fa-2x= t 'units.m'
           .param
             %i.fa.fa-fw.fa-lg.fa-arrows-h
             =t '.dt_dist'
@@ -590,7 +87,7 @@
         .col-md-4.col-sm-4.col-xs-6
           .param-val
             .avg-val.fa-3x#dd_elevation
-            .dst-unit.fa-2x= t 'units.m_html'
+            .dst-unit.fa-2x= t 'units.m'
           .param
             %i.fa.fa-fw.fa-lg.fa-arrows-v
             =t '.dt_elev'
