--- a/app/views/tracks/edit.html.haml
+++ b/app/views/tracks/edit.html.haml
@@ -1,7 +1,7 @@
 .track-edit-data{track_edit_data_attr}
 
 .container.top-buffer
-  = form_for @track, :html => {:class => 'form-horizontal', :role => 'form', :id => 'track_upload_form'} do |f|
+  = form_for @track, :html => {:class => 'form-horizontal', :role => 'form', :id => 'track_edit_form'} do |f|
 
     .row
       .col-sm-11
