--- a/app/views/events/_competitor_modal.html.haml
+++ b/app/views/events/_competitor_modal.html.haml
@@ -13,12 +13,12 @@
 
         .modal-body
           .form-group.row
-            %span.col-sm-3.control-label= 'Фамилия:'
-            .col-sm-4
-              %input.form-control.competitor-profile-autocomplete#competitor-last-name{:data => {:idField => '#competitor-profile-id', :firstNameField => '#competitor-first-name'}}
-            %span.col-sm-1.control-label= 'Имя:'
-            .col-sm-4
-              %input.form-control#competitor-first-name
+            %span.col-sm-3.control-label= 'Фамилия Имя:'
+            .col-sm-9
+              %input.form-control.competitor-profile-autocomplete#competitor-name{:data => {:idfield => '#competitor-profile-id'}}
+            -# %span.col-sm-1.control-label= 'Имя:'
+            -# .col-sm-4
+            -#   %input.form-control#competitor-first-name
             %input#competitor-profile-id{:type => 'hidden'}
           .form-group
             %span.col-sm-3.control-label= 'Костюм:'
