--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -33,8 +33,13 @@ body, p, ol, ul, td {
 }
 
 .img-50 {
-  height: 20px;
-  width: 20px;
+  height: 32px;
+  width: 32px;
+}
+
+a.dropdown-toggle.profile-dropdown {
+  padding-bottom: 9px;
+  padding-top: 9px
 }
 
 .top-buffer { margin-top: 20px }
