--- a/app/views/tracks/index.html.haml
+++ b/app/views/tracks/index.html.haml
@@ -1,22 +1,24 @@
 .container
-  .page-header
-    %h1=t '.title'
-
-  %table.table.table-hover
-    %thead
-      %tr
-        %th=t 'activerecord.attributes.track.id'
-        %th=t 'activerecord.attributes.track.name'
-        %th=t 'activerecord.attributes.track.suit'
-        %th=t 'activerecord.attributes.track.place'
-        %th=t 'activerecord.attributes.track.comment'
-        %th=t 'activerecord.attributes.track.uploaded_at'
-    %tbody
-      - @tracks.reverse_each do |track|
-        %tr.clickableRow{:data => {:url => track_path(:id => track.id)}}
-          %td.text-info= track.id
-          %td.text-info= track.name
-          %td.text-info= track.wingsuit.present? ? track.wingsuit.name : track.suit
-          %td.text-info= track.location
-          %td.text-muted= track.comment
-          %td.text-info= track.created_at.strftime('%d.%m.%Y')
+  #tracks{data: {tracks: tracks_index}}
+  -# .page-header
+  -#   %h1=t '.title'
+  -#
+  -# .tracks-index-data{data: {tracks: tracks_index}}
+  -# %table#tracks-index.table.table-hover
+  -#   %thead
+  -#     %tr
+  -#       %th=t 'activerecord.attributes.track.id'
+  -#       %th=t 'activerecord.attributes.track.name'
+  -#       %th=t 'activerecord.attributes.track.suit'
+  -#       %th=t 'activerecord.attributes.track.place'
+  -#       %th=t 'activerecord.attributes.track.comment'
+  -#       %th=t 'activerecord.attributes.track.uploaded_at'
+  -#   %tbody
+    -#   - @tracks.reverse_each do |track|
+    -#     %tr.clickableRow{:data => {:url => track_path(:id => track.id)}}
+    -#       %td.text-info= track.id
+    -#       %td.text-info= track.name
+    -#       %td.text-info= track.wingsuit.present? ? track.wingsuit.name : track.suit
+    -#       %td.text-info= track.location
+    -#       %td.text-muted= track.comment
+    -#       %td.text-info= track.created_at.strftime('%d.%m.%Y')
